--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,72 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>firstJavaRepository</name>
   
+  <properties>
+  	<spring.version>4.3.2.RELEASE</spring.version>
+  	<mybatis.version>3.4.1</mybatis.version>
+  </properties>
+  
   <dependencies>
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <scope>test</scope>  
+	</dependency>
   	<dependency>
 		<groupId>log4j</groupId>
 		<artifactId>log4j</artifactId>
-		<version>1.2.16</version>
+		<version>1.2.17</version>
 	</dependency>
 	<dependency>
 	    <groupId>com.caucho</groupId>
 	    <artifactId>hessian</artifactId>
 	    <version>4.0.38</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpclient</artifactId>
+	    <version>4.5.2</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>${spring.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis-spring</artifactId>
+	    <version>1.3.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis</artifactId>
+	    <version>${mybatis.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.zookeeper</groupId>
+	    <artifactId>zookeeper</artifactId>
+	    <version>3.4.6</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.101tec</groupId>
+	    <artifactId>zkclient</artifactId>
+	    <version>0.7</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.whalin</groupId>
+	    <artifactId>Memcached-Java-Client</artifactId>
+	    <version>3.0.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>de.javakaffee.msm</groupId>
+	    <artifactId>memcached-session-manager-tc7</artifactId>
+	    <version>2.0.0</version>
 	</dependency>
   </dependencies>
 </project>
