--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,20 @@
 	    <artifactId>hbase-client</artifactId>
 	    <version>1.1.2</version>
 	</dependency>
+	<!-- 操作ActiveMQ -->
+	<dependency>
+	  <groupId>org.apache.activemq</groupId>
+	  <artifactId>activemq-all</artifactId>
+	  <version>5.14.0</version>
+	</dependency>
+	
+	<!-- 必须加上，否则pom编译报错 -->
+	<dependency>  
+	    <groupId>jdk.tools</groupId>  
+	    <artifactId>jdk.tools</artifactId>  
+	    <version>1.7</version>  
+	    <scope>system</scope>  
+	    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>  
+	</dependency>  
   </dependencies>
 </project>
